Fix remove button alignment at type hint inputs

--- a/engine-wizard/scss/modules/Common/Components/_TypeHintInput.scss
+++ b/engine-wizard/scss/modules/Common/Components/_TypeHintInput.scss
@@ -11,7 +11,7 @@
         cursor: pointer;
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
 
         a {
             color: $body-color !important;
